# leptin

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo.tape
clients/typescript/: README.md  package-lock.json  package.json
clients/typescript/src/: index.ts
docs/: loops.md
examples/: claude_code_mcp.json  quickstart.py
src/leptin/: __init__.py  __main__.py  api.py  bench.py  cli.py  config.py  dashboard.py  embeddings.py  engine.py  guardrail.py  llm.py  logconf.py  server.py  storage.py  tokenizer.py  tuner.py
src/leptin/data/: contradictions.jsonl
tests/: conftest.py  test_bench.py  test_config.py  test_dashboard.py  test_embeddings.py  test_engine.py  test_feedback_loops.py  test_forget_restore.py  test_guardrail.py  test_hosted.py  test_install.py  test_ledger.py  test_mcp_subprocess.py  test_memory_types.py  test_realworld.py  test_recall_budget.py  test_server.py  test_storage.py  test_tuner.py  test_v13_correctness.py
tests/fixtures/: locomo_mini.json
