[project]
name = "leptin-hlp"
version = "1.2.0"
description = "A local-first control loop for agent memory — runs on your coding agent's harness hooks to keep long-term memory correct and useful: resolves contradictions, captures lessons, learns what helps, and never forgets without proving recall is preserved."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Leptin contributors" }]
keywords = ["mcp", "claude", "agent", "memory", "llm", "tokens", "context", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# Core has ZERO required third-party dependencies — it runs fully offline on the
# Python standard library. Hosted embeddings / LLM merge and exact tokenization
# are optional upgrades.
dependencies = []

[project.optional-dependencies]
hosted = ["openai>=1.0", "anthropic>=0.40", "voyageai>=0.2", "tiktoken>=0.7"]
dev = ["pytest>=8.0"]

[project.scripts]
leptin = "leptin.cli:main"
# Alias so `uvx leptin-hlp ...` works (uvx runs the same-named script).
leptin-hlp = "leptin.cli:main"

[project.urls]
Homepage = "https://github.com/lionellau/leptin"
Repository = "https://github.com/lionellau/leptin"
Issues = "https://github.com/lionellau/leptin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leptin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
