[project]
name = "leptin-hlp"
version = "1.4.0"
description = "Personal, local-first memory infrastructure for your coding agent. No account, no subscription; installs in ~30s (the agent can wire itself in) and the free local tier works on its own. Keeps long-term memory correct when decisions change: resolves contradictions, makes lessons stick, never forgets without proving recall is preserved."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Leptin contributors" }]
keywords = ["mcp", "claude", "claude-code", "codex", "coding-agent", "agent-memory",
            "memory", "local-first", "offline", "no-account", "personal-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Core has ZERO required third-party dependencies — it runs fully offline on the
# Python standard library. Hosted embeddings / LLM merge and exact tokenization
# are optional upgrades.
dependencies = []

[project.optional-dependencies]
hosted = ["openai>=1.0", "anthropic>=0.40", "voyageai>=0.2", "tiktoken>=0.7"]
dev = ["pytest>=8.0"]

[project.scripts]
leptin = "leptin.cli:main"
# Alias so `uvx leptin-hlp ...` works (uvx runs the same-named script).
leptin-hlp = "leptin.cli:main"

[project.urls]
Homepage = "https://github.com/lionellau/leptin"
Repository = "https://github.com/lionellau/leptin"
Issues = "https://github.com/lionellau/leptin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leptin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
